增加产生式头部自动补全功能